--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -11,11 +11,11 @@
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
   
-  .backdrop .is-hidden .modal {
+  .backdrop.is-hidden .modal {
     transform: translate(-50%, -50%) scale(0.5);
   }
   
-  .backdrop .is-hidden {
+  .backdrop.is-hidden {
     opacity: 0;
     pointer-events: none;
   }
@@ -28,7 +28,7 @@
     width: 528px;
     height: 581px;
     background-color: var(--title-color);
-    box-shadow: 0px 1px 3px rgb(0 0 0 / 12%), 0px 1px 1px rgb(0 0 0 / 14%), 0px 2px 1px rgb(0 0 0 / 20%);
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0,  0.2);
     border-radius: 4px;
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
@@ -50,11 +50,12 @@
     transition-property: fill;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+    &:hover, &:focus {
+      fill: var(--accent-color);
+    }
   }
   
-  .modal__button:hover, .modal__button:focus {
-    fill: var(--accent-color);
-  }
   
   .is-hidden {
     opacity: 0;
@@ -75,21 +76,7 @@
     letter-spacing: 0.03em;
     color: var(--alt-text-color);
   }
-  
-  .modal__text {
-    margin-top: 40px;
-    margin-left: 40px;
-    margin-right: 40px;
-    margin-bottom: 12px;
-    font-family: var(--main-font);
-    font-weight: bold;
-    font-size: 20px;
-    line-height: 23px;
-    text-align: center;
-    letter-spacing: 0.03em;
-    color: var(--alt-text-color);
-  }
-  
+ 
   .modal__form {
     width: 448px;
     margin-left: 40px;
@@ -122,18 +109,7 @@
     color: var(--main-text-color);
   }
   
-  .heading {
-    margin: 40px 40px 12px 40px;
-    width: 448px;
-    height: 23px;
-    font-family: var(--main-font);
-    font-weight: bold;
-    font-size: 20px;
-    line-height: 23px;
-    text-align: center;
-    letter-spacing: 0.03em;
-    color: var(--alt-text-color);
-  }
+ 
   
   .modal__form-field textarea {
     padding-left: 12px;
@@ -151,13 +127,15 @@
     padding-left: 12px;
     padding-bottom: 12px;
     padding-right: 12px;
+
+    &::placeholder {
+      margin-left: 16px;
+      margin-top: 12px;
+      color: rgba(117, 117, 117, 0.5);
+    }
   }
   
-  textarea::placeholder {
-    margin-left: 16px;
-    margin-top: 12px;
-    color: rgba(117, 117, 117, 0.5);
-  }
+ 
   
   .modal__checkbox-label {
     font-family: var(--main-font);
@@ -166,19 +144,19 @@
     line-height: 1.71;
     letter-spacing: 0.03em;
     color: var(--main-text-color);
-  }
-  
-  .modal__checkbox-label::before {
-    content: "";
-    display: inline-block;
-    margin-right: 7px;
-    width: 16px;
-    height: 15px;
-    border: 1px solid var(--alt-text-color);
-    border-radius: 2px;
-  }
-  
-  .modal__checkbox-cheked:checked + .modal__checkbox-label::before {
+
+    &::before {
+      content: "";
+      display: inline-block;
+      margin-right: 7px;
+      width: 16px;
+      height: 15px;
+      border: 1px solid var(--alt-text-color);
+      border-radius: 2px;
+    }
+
+
+  .modal__checkbox-cheked:checked + &::before {
     background-image: url(../images/Vector.svg);
     background-repeat: no-repeat;
     background-position: center;
@@ -187,8 +165,13 @@
     border-color: var(--accent-color);
   }
   
-  .modal__checkbox-cheked:focus + .modal__checkbox-label::before {
+  .modal__checkbox-cheked:focus + &::before {
     border-color:var(--accent-color)}
+
+  }
+  
+  
+ 
   
   .modal__input {
     padding-left: 42px;
@@ -199,15 +182,13 @@
     transition-property: border-color;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    
+    &:focus {
+      border-color: var(--accent-color);
+    }
   }
   
-  .modal__input:focus ~ .modal__icon {
-    fill: var(--accent-color);
-  }
   
-  .modal__input:focus {
-    border-color: var(--accent-color);
-  }
   
   .modal__icon {
     position: absolute;
@@ -216,6 +197,10 @@
     display: inline-block;
     transform: translateY(25%);
     fill: var(--alt-text-color);
+
+    .modal__input:focus ~  & {
+      fill: var(--accent-color);
+    }
   }
   
   .modal__submit {
